# FfmpegTest

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: myffmpeg.cpp
app/src/main/cpp/include/: com_example_wangxi_ffmpegtest_VideoUtils.h
app/src/main/java/com/example/wangxi/ffmpegtest/: MainActivity.java  VideoUtils.java
app/src/main/res/layout/: activity_main.xml
